Time Tracker Developer Org/src/objects/Time_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(ISBLANK(Account__c), 
   IF(ISBLANK(Case__c), &apos;&apos;,  Case__r.Account.Name),
    Account__r.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Describes associated Account for Time Tracker record created using Console Component - Timer</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Category__c</fullName>
        <label>Action Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Work</fullName>
                </value>
                <value>
                    <fullName>Non-Case Work</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Housekeeping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Time__c</fullName>
        <externalId>true</externalId>
        <label>Activity Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArticleId__c</fullName>
        <label>ArticleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closing_Activity_Time__c</fullName>
        <externalId>true</externalId>
        <label>Closing Activity Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deleted_by_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted by Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <externalId>true</externalId>
        <label>Document Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration2_Hours__c</fullName>
        <formula>(Duration2__c / 3600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration2_Minutes__c</fullName>
        <formula>VALUE(LEFT(Time_Spent__c, 2)) * 60 + 

VALUE( 

LEFT( 
RIGHT(Time_Spent__c, 
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)), 
FIND(&apos;:&apos;, 
RIGHT(Time_Spent__c, 
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c) 
) 
) 
- 1 
) 
) + 

VALUE(RIGHT(Time_Spent__c, 2))/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration2__c</fullName>
        <formula>VALUE(LEFT(Time_Spent__c, 2)) * 3600 +

VALUE(

LEFT(
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)),
FIND(&apos;:&apos;, 
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)
)
)
- 1
)
) * 60 +

VALUE(RIGHT(Time_Spent__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Variance__c</fullName>
        <description>Describes the variation between Automated Tracked Duration and Modified Duration field</description>
        <formula>ABS((Duration2__c -  Duration__c)/3600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Variance (in Hours)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Tracked Duration</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_Quarter_EST__c</fullName>
        <formula>IF(FLOOR ( MOD( Activity_Date__c - ($System.OriginDateTime - 5/24),1) *24) &lt; 10, &apos;0&apos; + TEXT(FLOOR ( MOD( Activity_Date__c - ($System.OriginDateTime - 5/24),1) *24)), TEXT(FLOOR ( MOD( Activity_Date__c - ($System.OriginDateTime - 5/24),1) *24))) + &apos;:Q&apos; + TEXT(FLOOR((MOD( Activity_Date__c - ($System.OriginDateTime - 5/24),1) *24 - FLOOR ( MOD( Activity_Date__c - ($System.OriginDateTime - 5/24),1) *24)) * 4 ) + 1)</formula>
        <label>Hourly Quarter (EST)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsBillable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>States whether activity is counted as Billable or Non-Billable. Defaulted as Checked (Automated activities). For Manual activities its value will depend on settings in &apos;TimeTracker Manual Activities&apos; custom-settings.</description>
        <label>IsBillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark if Closing-action is Cancel</description>
        <label>IsCancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUtilized__c</fullName>
        <defaultValue>true</defaultValue>
        <description>States whether activity is counted as Utilized or Non-Utilized. Defaulted as Checked (Automated activities). For Manual activities its value will depend on settings in &apos;TimeTracker Manual Activities&apos; custom-settings.</description>
        <label>IsUtilized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MLI__c</fullName>
        <externalId>true</externalId>
        <label>Manual Line Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Record_Document_Id__c</fullName>
        <label>New Record Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Record_URL__c</fullName>
        <description>To be used for deciding what activity name to be set for opening TT-record.</description>
        <label>New Record URL</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks_Ago__c</fullName>
        <formula>IF( 
CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7) &gt; 52, 
52, 
CEILING( ( Today() - DATE( YEAR( Today() ), 1, 1) + 1) / 7) 
)
-
IF( 
CEILING( ( DateValue(CreatedDate) - DATE( YEAR( DateValue(CreatedDate) ), 1, 1) + 1) / 7) &gt; 52, 
52, 
CEILING( ( DateValue(CreatedDate) - DATE( YEAR( DateValue(CreatedDate) ), 1, 1) + 1) / 7) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Weeks Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opening_Action__c</fullName>
        <label>Opening Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change Status</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Escalate to L3</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>File Upload</fullName>
                </value>
                <value>
                    <fullName>Log a Call</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>New Event</fullName>
                </value>
                <value>
                    <fullName>Post Case Comment</fullName>
                </value>
                <value>
                    <fullName>Start Chat</fullName>
                </value>
                <value>
                    <fullName>Update Case</fullName>
                </value>
                <value>
                    <fullName>Case Comment Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opening_Activity_Date__c</fullName>
        <label>Opening Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opening_Activity_Time__c</fullName>
        <externalId>true</externalId>
        <label>Opening Activity Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Console Toolkit</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TabInfo__c</fullName>
        <label>Tab Info</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>&apos;00:00:00&apos;</defaultValue>
        <label>Time Spent (HH:MM:SS)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Tracker_Dump__c</fullName>
        <description>This field contains TimeTracker dump before we process for insert or update</description>
        <label>Time Tracker Dump</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timesheet_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Entry</label>
        <referenceTo>Timesheet_Entry__c</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp_Details__c</fullName>
        <description>This field contains active and inActive timestamps from console toolkit</description>
        <label>Timestamp Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracked_Duration_Hours__c</fullName>
        <formula>(Duration__c /3600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracked Duration (Hours)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isClosedByCancelAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be used for Logging Cancel action Time</description>
        <label>isClosedByCancelAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Tracker</label>
    <listViews>
        <fullName>All_Time_Tracker</fullName>
        <columns>NAME</columns>
        <columns>Opening_Action__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Timesheet_Entry__c</columns>
        <columns>Timesheet__c</columns>
        <columns>IsBillable__c</columns>
        <columns>IsUtilized__c</columns>
        <columns>Non_Reportable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Time Trackers</label>
    </listViews>
    <listViews>
        <fullName>Current_Week</fullName>
        <columns>NAME</columns>
        <columns>Opening_Action__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Case__c</columns>
        <columns>Timesheet_Entry__c</columns>
        <columns>Timesheet__c</columns>
        <columns>IsBillable__c</columns>
        <columns>IsUtilized__c</columns>
        <columns>Non_Reportable__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Current Week</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Trackers</fullName>
        <columns>NAME</columns>
        <columns>Opening_Action__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Timesheet__c</columns>
        <columns>Timesheet_Entry__c</columns>
        <columns>IsBillable__c</columns>
        <columns>IsUtilized__c</columns>
        <columns>Non_Reportable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Time Trackers</label>
    </listViews>
    <listViews>
        <fullName>Preview_Week</fullName>
        <columns>NAME</columns>
        <columns>Opening_Action__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Timesheet_Entry__c</columns>
        <columns>Timesheet__c</columns>
        <columns>IsBillable__c</columns>
        <columns>IsUtilized__c</columns>
        <columns>Non_Reportable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Previous Week</label>
    </listViews>
    <listViews>
        <fullName>Two_Weeks_Ago</fullName>
        <columns>NAME</columns>
        <columns>Opening_Action__c</columns>
        <columns>Action__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Case__c</columns>
        <columns>Source__c</columns>
        <columns>Timesheet_Entry__c</columns>
        <columns>Timesheet__c</columns>
        <columns>IsBillable__c</columns>
        <columns>IsUtilized__c</columns>
        <columns>Non_Reportable__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>LAST_N_WEEKS:2</value>
        </filters>
        <label>2 Weeks Ago</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{000}</displayFormat>
        <label>Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trackers</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>HHMMSS_Time_Spent_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(

AND(

LEN(LEFT(Time_Spent__c, 2)) == 2,
ISNUMBER(LEFT(Time_Spent__c, 2)),
VALUE(LEFT(Time_Spent__c, 2)) &lt; 25,

LEN(LEFT(
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)),
FIND(&apos;:&apos;, 
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c) -1
)))) == 2,

ISNUMBER(LEFT(
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)),
FIND(&apos;:&apos;, 
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c) -1
)))),

VALUE(LEFT(
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)),
FIND(&apos;:&apos;, 
RIGHT(Time_Spent__c,
LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c) -1
)))) &lt; 60,

LEN(RIGHT(Time_Spent__c, 2)) == 2,
ISNUMBER(RIGHT(Time_Spent__c, 2)),
VALUE(RIGHT(Time_Spent__c, 2)) &lt; 60


)

)</errorConditionFormula>
        <errorDisplayField>Time_Spent__c</errorDisplayField>
        <errorMessage>Time should be entered in HH:MM:SS format. Valid values are HH (00 to 24), MM (00 to 59) and SS (00 to 59). For example: 01:29:38</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Manual_record_can_be_edited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Source__c, &apos;Manual&apos;)),
 ISCHANGED(Activity_Date__c))</errorConditionFormula>
        <errorDisplayField>Activity_Date__c</errorDisplayField>
        <errorMessage>Activity Date cannot be changed for automatically captured time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Field_If_Activity_General_Other</fullName>
        <active>false</active>
        <description>Comment field is mandatory if Activity is General-Other</description>
        <errorConditionFormula>IF( (Comment__c = &apos;&apos; &amp;&amp;  Action__c = &apos;General - Other&apos; ), true, false)</errorConditionFormula>
        <errorMessage>Comment field is mandatory if Activity is General-Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_Editing_of_approved_record</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Timesheet_Entry__r.Timesheet__r.Status__c, &apos;Submitted&apos;),
ISPICKVAL(Timesheet_Entry__r.Timesheet__r.Status__c, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Timesheet of the week of Activity Date is approved or under approval process. No new time can be entered for the timesheet.</errorMessage>
    </validationRules>
</CustomObject>